examples/ill-formed/primitives/RepeatedField.primitive
Primitive Repeated(Int x) {
    Int y = x;
    Int y = x;
}
